fixed text alignment, rebuilt deply build

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -3,8 +3,9 @@
     display: inline;
 }
 
+
 .mobile-only {
-    display: none;
+    display: none !important;
 }
 
 @media (max-width: 768px) {
@@ -234,7 +235,7 @@
     }
 
     .skill-percentage {
-        margin-left: 65vw;
+        margin-left: 60vw;
     }
 
     .skills-content {
